--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -90,7 +90,7 @@
     \bool_new:c { l__enumext_resume_#1_bool        }
     \bool_new:c { l__enumext_resume_empty_#1_bool  }
     \bool_new:c { l__enumext_resume_series_#1_bool }
-    \tl_new:c   { g__enumext_not_key_series_#1_tl  }
+    \tl_new:c   { g__enumext_save_last_keys_#1_tl  }
     \tl_new:c   { l__enumext_series_name_#1_tl     }
   }
 \clist_map_inline:nn { i, ii, iii, iv, vii } { \__enumext_tmp:n {#1} }
@@ -2004,7 +2004,7 @@
                                  {
                                  % bool true for resume=name
                                    \bool_set_true:c { l__enumext_resume_series_ \__enumext_level: _bool }
-                                   \__enumext_resume_series:n {##1}
+                                   \__enumext_resume:n {##1}
                                  }
                              }
                           },
@@ -2016,7 +2016,16 @@
     resume .code:n = {
                        \bool_if:NF \l__enumext_print_keyans_cmd_bool
                          {
-                           \__enumext_resume_series_vii:n {#1}
+                           \tl_set:Nn \l__enumext_series_name_tl {##1}
+                           \tl_if_empty:NTF \l__enumext_series_name_tl
+                             {
+                               \typeout{resume=empty-for-series}
+                               \bool_set_true:N \l__enumext_resume_count_bool
+                             }
+                             {
+                               \bool_set_true:N \l__enumext_resume_series_vii_bool
+                               \__enumext_resume_vii:n {#1}
+                             }
                          }
                       },
    }
@@ -2056,7 +2065,7 @@
           {
             \bool_if:cF { l__enumext_resume_ \__enumext_level: _bool }
               {
-                \__enumext_resume_last:n {#1}
+                \__enumext_save_last_keys:n {#1}
               }
             % Aquí es necesario usar resume-counter...bool_lazy_and es la opción aquí
             \bool_if:NT \l__enumext_resume_count_bool
@@ -2072,7 +2081,16 @@
           {
             \bool_if:NF \l__enumext_resume_vii_bool
               {
-                \__enumext_resume_last:n {#1}
+                \__enumext_save_last_keys:n {#1}
+              }
+            % Aquí es necesario usar resume-counter...bool_lazy_and es la opción aquí
+            \bool_if:NT \l__enumext_resume_count_bool
+              {
+                \tl_if_empty:NT \l__enumext_series_name_tl
+                  {
+                    \typeout{resume~~~~EMPTY~~~only~count}
+                    \__enumext_resume_counter:
+                  }
               }
           }
       }
@@ -2102,18 +2120,18 @@
       }
   }
 %% Save keys for last environment "without" |series| and |resume=name| keys active.
-\cs_new_protected:Npn \__enumext_resume_last:n #1
+\cs_new_protected:Npn \__enumext_save_last_keys:n #1
   {
     \int_compare:nNnT { \l__enumext_level_int } > { 0 }
       {
-        \tl_gclear:c { g__enumext_not_key_series_ \__enumext_level: _tl }
+        \tl_gclear:c { g__enumext_save_last_keys_ \__enumext_level: _tl }
         \tl_gset:ce
-          { g__enumext_not_key_series_ \__enumext_level: _tl }{ \__enumext_filter_series:n {#1} }
+          { g__enumext_save_last_keys_ \__enumext_level: _tl }{ \__enumext_filter_series:n {#1} }
       }
     \int_compare:nNnT { \l__enumext_level_h_int } = { 1 }
       {
-        \tl_gclear:N \g__enumext_not_key_series_vii_tl
-        \tl_gset:Ne \g__enumext_not_key_series_vii_tl { \__enumext_filter_series:n {#1} }
+        \tl_gclear:N \g__enumext_save_last_keys_vii_tl
+        \tl_gset:Ne \g__enumext_save_last_keys_vii_tl { \__enumext_filter_series:n {#1} }
       }
   }
 %% Internal function to save counter value and set int vars for |series|, |resume| and |resume*| keys.
@@ -2202,65 +2220,33 @@
       }
   }
 %% Internal function for |resume=series| key.
-\cs_new_protected:Npn \__enumext_resume_series:n #1
+\cs_new_protected:Npn \__enumext_resume:n #1
   {
     \int_compare:nNnT { \l__enumext_level_int } > { 0 }
       {
-        \tl_if_empty:nF {#1}
+        \tl_if_exist:cTF { g__enumext_series_ \tl_to_str:n {#1} _ \__enumext_level: _tl }
           {
-            \tl_if_exist:cTF { g__enumext_series_ \tl_to_str:n {#1} _ \__enumext_level: _tl }
-              {
-                \__enumext_resume_counter:n {#1}
-                \exp_args:Ne \keys_set:nv { enumext / level-\int_use:N \l__enumext_level_int }
-                  { g__enumext_series_ \tl_to_str:n {#1} _ \__enumext_level: _tl }
-              }
-              {
-                \msg_error:nnn { enumext } { unknown-series-standar } {#1}
-              }
+            \__enumext_resume_series:n {#1}
+            \exp_args:Ne \keys_set:nv { enumext / level-\int_use:N \l__enumext_level_int }
+              { g__enumext_series_ \tl_to_str:n {#1} _ \__enumext_level: _tl }
+          }
+          {
+            \msg_error:nnn { enumext } { unknown-series-standar } {#1}
           }
       }
   }
-\cs_new_protected:Npn \__enumext_resume_series_vii:n #1
+\cs_new_protected:Npn \__enumext_resume_vii:n #1
   {
     \int_compare:nNnT { \l__enumext_level_h_int } = { 1 }
       {
-        \tl_if_empty:nTF {#1}
+        \tl_if_exist:cTF { g__enumext_series_ \tl_to_str:n {#1} _vii_tl }
           {
-            \__enumext_resume_counter:n { }
+            \__enumext_resume_series:n {#1}
+            \keys_set:nv { enumext / enumext* }
+              { g__enumext_series_ \tl_to_str:n {#1} _vii_tl }
           }
           {
-            \tl_if_exist:cTF { g__enumext_series_ \tl_to_str:n {#1} _vii_tl }
-              {
-                \__enumext_resume_counter:n {#1}
-                \keys_set:nv { enumext / enumext* }
-                  { g__enumext_series_ \tl_to_str:n {#1} _vii_tl }
-              }
-              {
-                \msg_error:nnn { enumext } { unknown-series-starred } {#1}
-              }
-          }
-      }
-  }
-\cs_new_protected:Npn \__enumext_resume_counter:n #1
-  {
-    \int_compare:nNnT { \l__enumext_level_int } > { 0 }
-      {
-        \tl_clear:N \l__enumext_series_name_tl
-        \tl_set:Nn \l__enumext_series_name_tl {#1}
-        \bool_set_true:c { l__enumext_resume_ \__enumext_level: _bool }
-        \__enumext_resume_counter_series:
-      }
-    \int_compare:nNnT { \l__enumext_level_h_int } = { 1 }
-      {
-        \bool_set_true:N \l__enumext_resume_vii_bool
-        \tl_clear:N \l__enumext_series_name_tl
-        \tl_set:Nn \l__enumext_series_name_tl {#1}
-        \tl_if_empty:NTF \l__enumext_series_name_tl
-          {
-            \__enumext_resume_counter:
-          }
-          {
-            \__enumext_resume_counter_series:
+            \msg_error:nnn { enumext } { unknown-series-starred } {#1}
           }
       }
   }
@@ -2306,6 +2292,23 @@
                 \int_use:c { c@ __enumext_resume_vii_int } + 1
               }
           }
+      }
+  }
+\cs_new_protected:Npn \__enumext_resume_series:n #1
+  {
+    \int_compare:nNnT { \l__enumext_level_int } > { 0 }
+      {
+        \tl_clear:N \l__enumext_series_name_tl
+        \tl_set:Nn \l__enumext_series_name_tl {#1}
+        \bool_set_true:c { l__enumext_resume_ \__enumext_level: _bool }
+        \__enumext_resume_counter_series:
+      }
+    \int_compare:nNnT { \l__enumext_level_h_int } = { 1 }
+      {
+        \tl_clear:N \l__enumext_series_name_tl
+        \tl_set:Nn \l__enumext_series_name_tl {#1}
+        \bool_set_true:N \l__enumext_resume_vii_bool
+        \__enumext_resume_counter_series:
       }
   }
 \cs_new_protected:Nn \__enumext_resume_counter_series:
@@ -2360,12 +2363,12 @@
   {
     \cs_set:Npn \__enumext_tmp:n ##1
       {
-        \tl_if_empty:cF { g__enumext_not_key_series_ \int_to_roman:n {##1} _tl }
+        \tl_if_empty:cF { g__enumext_save_last_keys_ \int_to_roman:n {##1} _tl }
           {
-            \__enumext_resume_counter: % n { }
+            \__enumext_resume_counter:
             \exp_args:Ne \keys_set:nv
               { enumext / level-\int_use:N \l__enumext_level_int }
-              { g__enumext_not_key_series_ \int_to_roman:n {##1} _tl }
+              { g__enumext_save_last_keys_ \int_to_roman:n {##1} _tl }
           }
       }
     \int_compare:nNnT { \l__enumext_level_int } > { 0 }
@@ -2374,10 +2377,10 @@
       }
     \int_compare:nNnT { \l__enumext_level_h_int } = { 1 }
       {
-        \tl_if_empty:NF \g__enumext_not_key_series_vii_tl
+        \tl_if_empty:NF \g__enumext_save_last_keys_vii_tl
           {
-            \__enumext_resume_counter:% n { }
-            \keys_set:nV { enumext / enumext* } \g__enumext_not_key_series_vii_tl
+            \__enumext_resume_counter:
+            \keys_set:nV { enumext / enumext* } \g__enumext_save_last_keys_vii_tl
           }
       }
   }
@@ -5876,7 +5879,6 @@
   {
     \str_case:nnF {#1}
       {
-        %%%{ resume } {}
         { resume* } {} { reset } {} { reset* } {}
       }
       { , { \exp_not:n {#1} } }
